                - "creme_core-hatmenubar-addrelationships"
                - "creme_core-hatmenubar-form"
                - "creme_core-hatmenubar-update"
                - "creme_core-hatmenubar-view"
            - Javascript :
                * ArrayTools & GeneratorTools are no longer used (only by jqplot). So drop them and use underscore or d3 instead.
            - Apps :
                * Activities:
                    - Refactor creme.ActivityCalendar : can be now used as independent component.
                        - Move the "calendar user page" features to creme.ActivityCalendarController : floating events, sidebar selection, state within url hash
                        - Move calendar selection state queries to ActivityCalendarController. Improve performance.
                * Persons :
                    - The form class 'forms.contact.ContactNamesForm' has been removed.
                    - The class-view 'views.contact.ContactNamesEdition' has been removed.
                * Emails :
                    - The function 'utils.get_mime_image()' has been removed.
                    - In the constructor of 'utils.SignatureRenderer' the argument "domain" is now required.
        # The deletion of CremeEntities has been reworked in order to allow the customisation without having to write your own view.
            - If your model could be deleted in Creme 2.6 with the generic deletion view (i.e. you did not define your own view)
              you must now register your model in the new registry for deletion. In you "apps.py" :
                  def register_deletors(self, entity_deletor_registry):
                      entity_deletor_registry.register(model=MyModel)
            - If you disabled the deletion with the method 'get_delete_absolute_url()' returning an empty string,
              you should just remove this method to avoid some warning messages.