@@ -1,6 +1,6 @@
 /*******************************************************************************
     Creme is a free/open-source Customer Relationship Management software
-    Copyright (C) 2009-2022  Hybird
+    Copyright (C) 2009-2025  Hybird
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as published by
@@ -139,7 +139,7 @@ creme.widget.ChainedSelect = creme.widget.declare('ui-creme-chainedselect', {
         var ready = target.is('.widget-ready');
         var widget = target.creme().widget();
 
-        if (ready && $.inArray(name, widget.dependencies()) !== -1) {
+        if (ready && (widget.dependencies() || []).indexOf(name) !== -1) {
             widget.reload(data, undefined, undefined, true);
         }
     },
